--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Animate css CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>DSA - Agenda</title>
   </head>
   <body>
